--- a/package.json
+++ b/package.json
@@ -18,5 +18,5 @@
   "devDependencies": {
     "gh-pages": "^1.2.0"
   },
-  "homepage": "http://winstonliu1996.github.io/react-gh-pages"
+  "homepage": "http://winstonliu1996.github.io"
 }
